# weather

./: .gitignore  AGENTS.md  LABEL_SOURCES.md  README.md  pyproject.toml  report.md  requirements.txt
docs/: architecture.md  data_access.md  dust_storm_verified_ingestion.md  extreme_weather_verification_matrix_2026-07-16.md  extreme_weather_verified_inventory.md  flash_flood_verified_ingestion.md  flash_flood_web_verified_sources_2026-07-14.md  flash_flood_web_verified_sources_2026-07-16.md  stcast_2024_contract.md
examples/: demo_flash_flood_supervised_training.py  demo_saudi_warning.py  export_kg_ttl.py  forecast_model_probe.py  real_data_probe.py  run_api_client_demo.py  run_batch_risk_scan.py  run_forecast_layer4_pipeline.py  run_real_aurora_mswep.py  sample_features.json  strands_smoke.py  train_layer4_lightgbm.py
scripts/: audit_flash_flood_province_day_labels.py  audit_flash_flood_province_lookup.py  audit_saudi_stcast_dataset.py  bootstrap_graphdb.py  build_dry_heat_agriculture_supervised_training_table.py  build_dust_storm_event_table.py  build_dust_storm_province_day_feature_table.py  build_dust_storm_supervised_training_table.py  build_dust_storm_training_labels.py  build_extreme_heat_supervised_training_table.py  build_flash_flood_event_table.py  build_flash_flood_province_day_feature_table.py  build_flash_flood_province_lookup.py  build_flash_flood_supervised_training_table.py  build_flash_flood_training_labels.py  build_layer4_training_table.py  build_saudi_ml_inputs.py  build_saudi_stcast_stats.py  build_verified_flash_flood_event_table.py  (+9 more)
(+85 files in other folders)
