[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mazu-saudi"
version = "0.1.0"
description = "Runnable MVP for MAZU Saudi multi-hazard early warning agent algorithms."
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7",
  "numpy>=1.26",
  "rdflib>=7.0",
  "fastapi>=0.111,<0.116",
  "starlette>=0.37.2,<0.40",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
forecast = ["xarray>=2024.1", "zarr>=2.18", "netCDF4>=1.6", "cdsapi>=0.7.5"]
ml = ["pandas>=2.2", "pyarrow>=17.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
